[project]
name = "comfyui-rogala"
version = "0.1.1"
description = "Custom ComfyUI node pack by rogala"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []

[project.urls]
Repository = "https://github.com/rogala/ComfyUI-rogala"

[tool.comfy]
PublisherId = "rogala"
DisplayName = "ComfyUI Rogala Nodes"
Icon = ""
